# new-spotify-project

./: .gitignore  AppDataCleanup.ipynb  ArtistCSV.ipynb  app.py  app_artists.csv  app_data.csv  pyproject.toml  spotify_tools.py  test.ipynb  tutorial.qmd
.streamlit/: config.toml
notebooks/: clean_app_data.ipynb
spotify_tools/: analysis.py  clean.py  recommend.py
